# SkillFactory-agent

./: .env.example  .gitignore  Agent SDK 参考 - Python.md  IMPLEMENTATION_DESIGN.md  IMPLEMENTATION_DESIGN_v2.md  IMPLEMENTATION_PLAN.md  PRD.md  README.md  pyproject.toml  run_agent.py  test_docker.py
.claude/: settings.local.json
.claude/skills/skill-browser-crawl/: SKILL.md
data/: results_log.json  skills_todo.json  skills_todo_multilang_example.json
docs/: DOCKER_MIRROR.md  DOCS.md  MULTILANG_SUPPORT.md  PRD.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md
src/: cli.py  config.py  models.py  orchestrator.py  worker.py
src/utils/: docker.py  docker_multilang.py
